# LazyFox

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml  push-lazyfox-zip.yml
cli/: __init__.py  _version.py  app.py
cli/commands/: init.py
demo/: trae.py  zenmux.py
ext/: __init__.py  gmail.py  log.py  mail_service.py  test.py
