[project]
name = "foxkit"
version = "1.1.0"
description = "FoxKit CLI - 浏览器自动化与逆向场景的 Python 模板脚手架工具"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "camoufox[geoip]>=0.4.11",
    "curl-cffi>=0.14.0",
    "httpx[http2]>=0.28.1",
    "loguru>=0.7.3",
    "parsel>=1.11.0",
    "pycryptodome>=3.23.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
    "zstandard>=0.25.0",
]

[project.scripts]
foxkit = "cli.app:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "ext"]
